test/fixtures/syntaxerrors/expectedtype.lys
val x = {
  a is
  1
}
val x = {
  a as {}
}


type b = a | type b = a & .